--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.software.leanback" />
 
     <uses-feature
@@ -12,15 +14,23 @@
         android:banner="@drawable/banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleTVLeanback">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.trailer.view.TrailerActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.details.view.DetailsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.catalog.view.CatalogActivity"
             android:exported="true">
 
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
