Se añaden los fragmentos de detalle y de vídeo con su documentación detallada. También se han añadido dependencias a las librerías de ExoPlayer, así como algunas funciones de extensión de Glide.
Por otro lado también se ha añadio un GuideStepSupportFragment con toda la documentación de como se implementa.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
             buildConfigField("String", "API_KEY", "\"c6c3f1297f568b08c94d58169a1ac0ee\"")
         }
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
