--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,25 +19,31 @@
         android:theme="@style/Theme.GoogleTVLeanback">
 
         <activity
+            android:name=".ui.dialog.DialogActivity"
+            android:exported="true">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
             android:name=".ui.trailer.view.TrailerActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.details.view.DetailsActivity"
             android:exported="false" />
 
         <activity
             android:name=".ui.catalog.view.CatalogActivity"
-            android:exported="true">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-
-            </intent-filter>
-
-        </activity>
+            android:exported="false" />
 
     </application>
 
