Se añade el fragmento de ajustes usando la clase de Preferencias que nos brinda Leanback que no es más que la de Android pero adaptada, con toda la explicación y documentación para su mejor comprensión.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     //Leanback library
 
     implementation 'androidx.leanback:leanback:1.2.0-alpha02'
+    implementation "androidx.leanback:leanback-preference:1.2.0-alpha02"
+
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
 
     //Retrofit
 
